styles.css
body {
    font-family: Tahoma, sans-serif;
    background-color: white;
    margin: 0;
    padding: 0;   
    display: flex;
    flex-direction: column;
}

/* common */
.section {
    flex: 1;
    padding: 0;
}

.header, .messages, .game {
    background-color: white;
}

/* header section */
.header {
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: gray;
}

.header-txt {
    flex: 1;
    text-align: center;
    color: black;
    font-style: italic;
    font-size: 36px;
    font-weight: 500;
}

/* messages section */
.messages {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}
#error-message {
    height: 25px;
}

/* game section */
.game-header {
    color: #1F2937;
    font-size: 36px;
    font-weight: 900;
    padding: 40px;
    text-align: center;
}

.tubes-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    background-color: white;
    padding: 20px 0;
}

.tube {
    height: 260px;
    max-width: 80px;
    padding: 15px 15px 0 15px;
    margin: 0 25px;
    background-color: silver;
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: end;
}

.tube-complete {
    border: green 1px solid;
}

.ball {
    border-radius: 50%;
    width: 50px;
    height: 50px;
    margin: 0 15px 15px 15px;
    transition: 0.5s;
}

.selected {
    transform: translateY(-30px);
    transition: 0.5s;
}

.blue {
    background-color: blue;
}

.red {
    background-color: red;
}

.orange {
    background-color: orange;
}

.yellow {
    background-color: yellow;
}

.green {
    background-color: green;
}

.purple {
    background-color: purple;
}

